update openapi definations
